// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-popover> Component UUID of the popover 1`] = `
<bolt-popover uuid="custom-unique-id">
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-custom-unique-id"
                           aria-controls="js-bolt-tooltip-custom-unique-id"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-custom-unique-id"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component basic usage 1`] = `
<bolt-popover uuid="12345">
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: auto 1`] = `
<bolt-popover placement="auto"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover  c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom 1`] = `
<bolt-popover placement="bottom"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom-end 1`] = `
<bolt-popover placement="bottom-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom-end c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: bottom-start 1`] = `
<bolt-popover placement="bottom-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom-start c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left 1`] = `
<bolt-popover placement="left"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--left c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left-end 1`] = `
<bolt-popover placement="left-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--left-end c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: left-start 1`] = `
<bolt-popover placement="left-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--left-start c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right 1`] = `
<bolt-popover placement="right"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--right c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right-end 1`] = `
<bolt-popover placement="right-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--right-end c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: right-start 1`] = `
<bolt-popover placement="right-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--right-start c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top 1`] = `
<bolt-popover placement="top"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--top c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top-end 1`] = `
<bolt-popover placement="top-end"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--top-end c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content placement: top-start 1`] = `
<bolt-popover placement="top-start"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--top-start c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: medium 1`] = `
<bolt-popover spacing="medium"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-medium c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: none 1`] = `
<bolt-popover spacing="none"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom  c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: small 1`] = `
<bolt-popover spacing="small"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-small c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;

exports[`<bolt-popover> Component content spacing: xsmall 1`] = `
<bolt-popover spacing="xsmall"
              uuid="12345"
>
  <replace-with-children class="c-bolt-popover c-bolt-popover--bottom c-bolt-popover--spacing-xsmall c-bolt-popover--text-wrap">
    <replace-with-children role="button"
                           tabindex="-1"
                           aria-describedby="js-bolt-tooltip-12345"
                           aria-controls="js-bolt-tooltip-12345"
    >
      <bolt-button>
        This triggers a popover
      </bolt-button>
    </replace-with-children>
    <span slot="content">
      <replace-with-children class="c-bolt-popover__content"
                             id="js-bolt-tooltip-12345"
                             aria-hidden="true"
      >
        This is the content of the popover with a
        <bolt-link url="https://pega.com">
          call to action
        </bolt-link>
        .
      </replace-with-children>
    </span>
  </replace-with-children>
</bolt-popover>
`;
